# rocketreels

./: .gitignore  README.md  content_generation_workflow.py  generate_video.py  interactive_create_video.py  main.py  pyproject.toml  test_editing.py  test_generation.py  video_editing_workflow.py  video_generation_workflow.py  video_pipeline_workflow.py
config/: editing_config.py
editing/: subtitle_processing.py  video_processing.py
editing_config/: editing_config.py
generation/: audio_processing.py  gemini_image_processor.py  image_processing.py  text_processing.py
models/: editing_options.py  multimedia_composition.py  video_clip.py  video_wrapper.py
test_video_content/video_clip/: video_clip.json  video_clip.pkl
tests/: video_editing_test.py
utils/: utilities.py
web_scraping/: web_scraper.py
